--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,103 @@ code {
 }
 
 
-/* login page */
+/* home page */
+
+* {
+  background-color: rgb(254, 245, 234);
+}
+
+img {
+  width: 15vw;
+  display: block;
+  float: left;
+  margin-left: 0;
+  margin-right: 10px;
+  border-radius: 20%
+}
+
+/* nav bar*/
+.navbar {
+  display: flex;
+  justify-content: center;
+  background-color: white;
+}
+
+.navbar a {
+  flex: 1;
+  text-align: center;
+  padding: 12px;
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+/*footer*/
+.icon-bar {
+  display: flex;
+  justify-content: center;
+  background-color: white;
+}
+
+.icon-bar a {
+  flex: 1;    
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
+}
+
+.icon-bar a:hover {
+  background-color: rgb(187, 229, 212);
+}
+
+.navbar a:hover {
+  background-color: rgb(187, 229, 212);
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+section {
+  flex: 1;
+  overflow-y: auto;
+  padding-bottom: 20px ;
+}
+
+div.scroll-container {
+  background-color: rgb(254, 245, 234);
+  overflow: auto;
+  white-space: nowrap;
+  padding: 10px;
+  height: 200px;
+  display: flex;
+}
+
+div.scroll-container img {
+  padding: 10px;
+}
+
+h4 {
+  text-align: center;
+}
+
+h5 {
+  text-align: center;
+}
+
+.logo {
+  width: 35vw;
+  display: block;
+  float: left;
+  margin-left: 0;
+  margin-right: 10px;
+  border-radius: 20% 
+}
+
 
 
 
