updating home page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -93,16 +93,18 @@ div.scroll-container img {
   padding: 10px;
 }
 
-h4 {
+h1 {
   text-align: center;
+  font-style: italic;
 }
 
-h5 {
+h2 {
   text-align: center;
+  font-style: italic;
 }
 
 .logo {
-  width: 35vw;
+  width: 25vw;
   display: block;
   float: left;
   margin-left: 0;
@@ -110,7 +112,67 @@ h5 {
   border-radius: 20% 
 }
 
+/* quotes slideshow */
+.slideshow-container {
+  position: relative;
+  padding: 20px;
+  /* background-color: black; */
+  margin: 0 auto;
+  width: 40%;
+}
 
+.mySlides {
+  display: none;
+  padding: 140px;
+  text-align: center;
+}
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -30px;
+    padding: 16px;
+    color: #888;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.next {
+    position: absolute;
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: rgb(187, 229, 212);
+    color: white;
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+/* .active,
+.dot:hover {
+    background-color: #717171;
+} */
+
+q {
+    font-style: italic;
+      font-size: 20px;
+}
 
 
 
