--- a/client/src/index.css
+++ b/client/src/index.css
@@ -181,3 +181,90 @@ q {
   width: 500px;
   height: 500px;
 }
+
+
+
+
+/* dashboard styling for the map and searches*/
+
+body{
+  padding:20px;
+  background-color: rgb(254, 245, 234);
+}
+
+#map {
+  border: 0;
+  width: 100%;
+  height: auto;
+}
+
+header {
+  background-color: rgb(254, 245, 234);
+  height: 50px;
+}
+
+.place-search-input {
+  width: 65%;
+  height: auto;
+}
+
+.button {
+  border-style: ridge;
+  border: 2px solid gray;
+}
+
+.button:hover {
+  border: 2px solid black;
+}
+/* the search field */
+#myInput {
+  font-size: 12px;
+  padding: auto;
+  border: none;
+  border-bottom: 1px solid rgb(254, 245, 234);;
+}
+
+
+.autocomplete {
+  position: relative;
+  display: inline-block;
+}
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
+}
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: rgb(254, 245, 234);;
+  border-bottom: 1px solid #d4d4d4;
+}
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9;
+}
+.autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: DodgerBlue !important;
+  color: rgb(254, 245, 234);;
+}
+
+.label {
+  color: rgba(12, 47, 246, 0.885);
+}
+
+.button-is-small {
+  color: rgba(12, 47, 246, 0.885)
+}
+
+.title {
+  color: rgba(12, 47, 246, 0.885);
+}
